# gamelore-rag

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
core/: settings.py  urls.py
games/: admin.py  igdb_client.py  models.py  serializers.py  urls.py
games/migrations/: 0001_initial.py
rag/: eval.py  ingestion.py  models.py  retrieval.py  router.py  tasks.py  tests.py  urls.py  views.py
rag/migrations/: 0001_enable_vector_extension.py  0001_initial.py  0002_initial.py
