[project]
name = "narrative-game-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6",
    "djangorestframework>=3.17.1",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "python-decouple>=3.8",
    "requests>=2.34.2",
]
