[project]
name = "narrative-game-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "celery>=5.6.3",
    "django>=6.0.6",
    "djangorestframework>=3.17.1",
    "langchain>=1.3.9",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.2",
    "openai>=2.41.1",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "python-decouple>=3.8",
    "redis>=8.0.0",
    "requests>=2.34.2",
    "youtube-transcript-api>=1.2.4",
]

[dependency-groups]
dev = [
    "pytest-django>=4.12.0",
]
